Fixed the issue where the toolbar icons were covering the scrollbar on the right.  Also, I forgot to mention this in the last commit but I added the ability for users to adjust the font size.

--- a/gateone/templates/themes/black.css
+++ b/gateone/templates/themes/black.css
@@ -180,7 +180,7 @@
     z-index:600;
     position:absolute;
     top:0;
-    right:0;
+    right:1.8em;
     color: #fff;
     text-align: right;
 }
@@ -190,7 +190,7 @@
     opacity: .75;
     padding-top: 0.5em;
     padding-bottom: 0.5em;
-    padding-right: 1.8em;
+/*     padding-right: 1.8em; */
     /* WebKit */
     -webkit-transition: -webkit-transform 1.0s ease-in-out;
     /* Firefox */
